--- a/index.html
+++ b/index.html
@@ -17,16 +17,41 @@
     <div id="feedback">Settings are at default.</div>
     <div class="flexdiv" onclick="dropdownFunc(1)">
         <img src="images/downarrow.png" alt="Dropdown" class="arrow" id="arrow1">
-        <h2>Testing 1</h2>
+        <h2>Minecraft with RTX</h2>
     </div>
     <div class="dropdown" id="dropdown1">
         <table class="dropdowntable">
             <tr>
-                <td><img class="preview" alt="MC1" src="mc/MC1.png" id="MC1" onclick="createBackground('mc/MC1.png')"></td>
-                <td><img class="preview" alt="MC1" src="mc/MC2.png" id="MC2" onclick="createBackground('mc/MC2.png')"></td>
-                <td><img class="preview" alt="MC1" src="mc/MC3.png" id="MC3" onclick="createBackground('mc/MC3.png')"></td>
-                <td><img class="preview" alt="MC1" src="mc/MC4.png" id="MC4" onclick="createBackground('mc/MC4.png')"></td>
-                <td><img class="preview" alt="MC1" src="mc/MC5.png" id="MC5" onclick="createBackground('mc/MC5.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC1.png" id="MC1" onclick="createBackground('mc/MC1.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC2.png" id="MC2" onclick="createBackground('mc/MC2.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC3.png" id="MC3" onclick="createBackground('mc/MC3.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC4.png" id="MC4" onclick="createBackground('mc/MC4.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC5.png" id="MC5" onclick="createBackground('mc/MC5.png')"></td>
+            </tr>
+            <tr>
+                <td><img class="preview" alt="BG" src="mc/MC6.png" id="MC6" onclick="createBackground('mc/MC6.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC7.png" id="MC7" onclick="createBackground('mc/MC7.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC8.png" id="MC8" onclick="createBackground('mc/MC8.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC9.png" id="MC9" onclick="createBackground('mc/MC9.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC10.png" id="MC10" onclick="createBackground('mc/MC10.png')"></td>
+            </tr>
+            <tr>
+                <td><img class="preview" alt="BG" src="mc/MC11.png" id="MC11" onclick="createBackground('mc/MC11.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC12.png" id="MC12" onclick="createBackground('mc/MC12.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC13.png" id="MC13" onclick="createBackground('mc/MC13.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC14.png" id="MC14" onclick="createBackground('mc/MC14.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC15.png" id="MC15" onclick="createBackground('mc/MC15.png')"></td>
+            </tr>
+            <tr>
+                <td><img class="preview" alt="BG" src="mc/MC16.png" id="MC16" onclick="createBackground('mc/MC16.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC17.png" id="MC17" onclick="createBackground('mc/MC17.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC18.png" id="MC18" onclick="createBackground('mc/MC18.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC19.png" id="MC19" onclick="createBackground('mc/MC19.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC20.png" id="MC20" onclick="createBackground('mc/MC20.png')"></td>
+            </tr>
+            <tr>
+                <td><img class="preview" alt="BG" src="mc/MC21.png" id="MC21" onclick="createBackground('mc/MC21.png')"></td>
+                <td><img class="preview" alt="BG" src="mc/MC22.png" id="MC22" onclick="createBackground('mc/MC22.png')"></td>
             </tr>
         </table>
     </div>
